<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".service.VoterServicesFragment">

    <TextView
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat_font"
            android:text="@string/feedback"
            android:background="@color/black1"
            android:padding="16dp"
            android:elevation="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="6dp"
                    android:layout_margin="16dp"
                    android:clipToPadding="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:text="@string/please_provide_your_feedback"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:fontFamily="@font/roboto_font"
                            android:padding="16dp"
                            android:background="@color/black1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:textSize="14sp"
                            android:fontFamily="@font/roboto_font"
                            android:padding="16dp"
                            android:text="@string/please_provide_us_your_feed_back_so_that_we_can_work_towards_making_the_app_better_and_providing_you_with_a_much_more_immersive_experience"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:clipToPadding="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:text="@string/feedback_form"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:fontFamily="@font/roboto_font"
                            android:padding="16dp"
                            android:background="@color/black1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <EditText
                            android:id="@+id/nameBox"
                            android:textSize="14sp"
                            android:fontFamily="@font/roboto_font"
                            android:padding="16dp"
                            android:layout_margin="16dp"
                            android:inputType="textPersonName"
                            android:hint="@string/full_name"
                            android:background="@drawable/edit_text_bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <EditText
                            android:id="@+id/emailBox"
                            android:textSize="14sp"
                            android:fontFamily="@font/roboto_font"
                            android:padding="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email"
                            android:background="@drawable/edit_text_bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <EditText
                            android:id="@+id/phoneBox"
                            android:textSize="14sp"
                            android:fontFamily="@font/roboto_font"
                            android:padding="16dp"
                            android:layout_margin="16dp"
                            android:inputType="phone"
                            android:hint="@string/phone_optional"
                            android:background="@drawable/edit_text_bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <EditText
                            android:id="@+id/messageBox"
                            android:textSize="14sp"
                            android:fontFamily="@font/roboto_font"
                            android:padding="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="16dp"
                            android:inputType="text|textMultiLine"
                            android:minLines="5"
                            android:maxLines="7"
                            android:hint="@string/type_your_message_here"
                            android:background="@drawable/edit_text_bg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:text="@string/need_more_help"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimary"
                            android:fontFamily="@font/roboto_font"
                            android:textSize="14sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:id="@+id/btnEmail"
                            android:text="@string/mail_us_at_gmonetix_gmail_com"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:fontFamily="@font/roboto_font"
                            android:textSize="14sp"
                            android:layout_marginBottom="16dp"
                            android:layout_marginTop="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/btnSubmit"
                            android:text="@string/submit"
                            android:fontFamily="@font/roboto_font"
                            android:textAllCaps="false"
                            android:textStyle="bold"
                            android:textSize="16dp"
                            android:padding="12dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>